bd-web-dvp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bd-dvp-web
  namespace: bd-dvp
spec:
  selector:
    matchLabels:
      app: bd-dvp-web
  replicas: 0
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: bd-dvp-web
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - mysql
                topologyKey: kubernetes.io/hostname
      containers:
        - name: bd-dvp-web
          image: quay.io/bot_detector/bd-web:77acbcd
          ports:
            - name: dvp-web-port
              containerPort: 8000
