bd-web-dvp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bd-dvp-web-service
  namespace: bd-dvp
spec:
  selector:
    app: bd-dvp-web
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
