bd-web-dvp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bd-dvp-web-ingress
  namespace: bd-dvp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - web.dev.osrsbotdetector.com
      secretName: argocd-tls
  rules:
    - host: web.dev.osrsbotdetector.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bd-dvp-web-service
                port:
                  name: web-port
